# dialogui

./: README.md  dialogui.cabal  stack.yaml
examples/: Echo.hs
src/UI/: Dialogui.hs
src/UI/Dialogui/: HTk.hs  TUI.hs
