name:                dialogui
version:             0.1.0.0
stability:           experimental
synopsis:            Simple cmdline-oriented UI
description:         Simple UI, oriented on dialogue with user through command line
homepage:            https://github.com/astynax/dialogui
license:             BSD3
license-file:        LICENSE
author:              Aleksey Pirogov (aka astynax)
maintainer:          astynax84@gmail.com
copyright:           2015 astynax
category:            UI,GUI
build-type:          Simple
cabal-version:       >=1.10

flag buildExamples
  description:         Build example executables.
  default:             False

library
  exposed-modules:     UI.Dialogui,
                       UI.Dialogui.TUI
  build-depends:       base >= 4.7 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable hecho
  main-is:             Echo.hs
  hs-source-dirs:      examples
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(buildExamples)
    build-depends:     base >= 4.7 && < 5,
                       dialogui
  else
    buildable:         False
